Increase inline math font size to almost align with block math Fixes zotero/zotero#2775

--- a/src/stylesheets/components/core/_math.scss
+++ b/src/stylesheets/components/core/_math.scss
@@ -27,3 +27,12 @@ math-display {
         content: "";
     }
 }
+
+math-inline {
+	font-size: 1.1em !important;
+}
+
+math-display {
+	//font-size: 1em !important;
+}
+
